<resources>
    <string name="app_name">chatChat</string>
    <string name="you">"You: "</string>
    <string name="new_username">New username</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="name_updated">Your name is updated</string>
    <string name="name_updated_failed">Your name update failed</string>
    <string name="change_password">Change password</string>
    <string name="pass_than_6">Password must be than 6 characters</string>
    <string name="email_required">Email is required</string>
    <string name="pass_required">Password is required</string>
    <string name="email_pass_wrong">Email or password is wrong</string>
    <string name="you_have_message">You have a new message</string>
    <string name="failed">Failed</string>
    <string name="check_email">Please check your email</string>
    <string name="turn_on_status">Turn on status</string>
    <string name="turn_off_status">Turn off status</string>
    <string name="uploading">Uploading</string>
    <string name="no_image_selected">No image selected</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="status_is_off">Status is turned off</string>
    <string name="status_is_on">Status is turned on</string>
    <string name="name_required">User name is required</string>
    <string name="password_not_match">Password not matching</string>
    <string name="confirm_required">Confirm is required</string>
    <string name="user_exist">User is exist or email is not available</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_acc">I dont have account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="your_email">Your email</string>
    <string name="reset">Send</string>
    <string name="you_will_receive_email">You will receive an email to reset your password</string>
    <string name="add_avatar">Add avatar</string>
    <string name="edit_username">Edit username</string>
    <string name="logout">Logout</string>
    <string name="user_name">User name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="search">Search</string>
    <string name="type_a_message">Type a message...</string>
    <string name="email_not_used">Email not used for any user, please check again!</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="cant_send_message">Network unavailable, can not send a message</string>
    <string name="pass_updated">Password is updated</string>
    <string name="pass_update_fail">Password update failed</string>
</resources>