<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        app:met_floatingLabel="normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/reset"
        android:id="@+id/btn_reset"
        android:textColor="@color/text_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:text="@string/you_will_receive_email"
        android:textColor="#000" />


</LinearLayout>

