<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/sign_up"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_text_input"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="#4B413A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_text_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="#4B413A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_user_name" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_text_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="#4B413A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_text_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="#4B413A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_login_button"
        android:fontFamily="@font/regular"
        android:text="@string/sign_up"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="105dp"
        android:layout_height="81dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>