<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_chatchat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <TextView
        android:id="@+id/textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/regular"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_text_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="#4B413A"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_login"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_text_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textColorHint="#4B413A"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_i_have_no_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_acc"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_i_have_no_acc"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_login_button"
        android:text="@string/login"
        android:fontFamily="@font/regular"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="105dp"
        android:layout_height="81dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>